@@ -945,6 +945,13 @@ project(Reactor Remove Resume Test) : acetest {
   }
 }
 
+project(Reactor_Remove_Resume_Test_Dev_Poll) : acetest {
+  exename = Reactor_Remove_Resume_Test_Dev_Poll
+  Source_Files {
+    Reactor_Remove_Resume_Test_Dev_Poll.cpp
+  }
+}
+
 project(Reactor Timer Test) : acetest {
   avoids += ace_for_tao
   exename = Reactor_Timer_Test
